# vk-scripts

./: .gitignore  Makefile  Procfile  README.md  app.py  pyproject.toml  requirements.txt
static/: groups.txt  style.css
templates/: index.html  style.css
vk_scripts/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
vk_scripts/reposter/: apps.py  forms.py  models.py  views.py
vk_scripts/reposter/migrations/: 0001_initial.py  0002_delete_post.py  0003_group_active_alter_group_url.py  0004_crontabhours.py
vk_scripts/reposter/modules/: vk_api_code.py
vk_scripts/reposter/scheduler/: scheduler.py
vk_scripts/static/: groups.txt  style.css
vk_scripts/static/reposter/: starter-template.css
vk_scripts/templates/: base.html  index.html  login.html  schedule.html  welcome.html
vk_scripts_flask/: basic_01.py  flask_app_important.py  gui.py  simple_example.py
vk_scripts_old_ver/: clock.py  forms.py  settings.py  urls.py  views.py
vk_scripts_old_ver/parent_folder/: manage.py  requirements.txt
vk_scripts_old_ver/reposter/: apps.py  models.py
vk_scripts_old_ver/reposter/migrations/: 0001_initial.py
vk_scripts_old_ver/reposter/modules/: data.py  vk_api_code.py
vk_scripts_old_ver/static/: style.css
vk_scripts_old_ver/templates/: index.html
