[tool.poetry]
name = "vk-scripts"
version = "0.1.0"
description = "Scripts for vk.com"
authors = ["odhako"]
readme = "README.md"
packages = [{include = "vk_scripts"}]

[tool.poetry.dependencies]
python = "^3.8"
vk-api = "^11.9.9"
Django = "^4.1.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
psycopg2 = "^2.9.3"
APScheduler = "^3.9.1"
ipython = "^8.5.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
